--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,23 @@
 version: '3.9'
 
 services:
+  db:
+    image: postgres:14.0-alpine
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=bookstore_dev
+      - POSTGRES_PASSWORD=bookstore_dev
+      - POSTGRES_DB=bookstore_dev_db
+    networks:
+      - backend
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - .:/usr/src/app/
+      - app_data:/usr/src/app/
     ports:
       - "8000:8000"
     env_file:
@@ -14,19 +26,10 @@ services:
       - backend
     depends_on:
       - db
-  db:
-    image: postgres:14.0-alpine
-    volumes:
-      - postgres_data:/var/lib/postgres/data/
-    environment:
-      - POSTGRES_USER=bookstore_dev
-      - POSTGRES_PASSWORD=bookstore_dev
-      - POSTGRES_DB=bookstore_dev_db
-    networks:
-      - backend
 networks: #Adicionando a network
   backend:
     driver: bridge
 
 volumes:
   postgres_data:
+  app_data:
