--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,8 +7,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.11, 3.12]
-        poetry-version: [1.8.2]
+        python-version: [3.13.5]
+        poetry-version: [2.1.3]
 
     runs-on: ubuntu-latest
 
