--- a/.github/workflows/workflow-pr.yml
+++ b/.github/workflows/workflow-pr.yml
@@ -14,7 +14,7 @@ jobs:
           python-version: 3.13.5
       - name: Install poetry
         run: |
-          pip install "poetry==${{ matrix.poetry-version }}"
+          pip install "poetry==2.13"
         env:
           POETRY_VIRTUALENVS_CREATE: false
 
