corrigindo erro de digitação no workflow-pr.yml

--- a/.github/workflows/workflow-pr.yml
+++ b/.github/workflows/workflow-pr.yml
@@ -32,7 +32,7 @@ jobs:
         uses: wemake-services/wemake-python-styleguide@0.16.0
         continue-on-error: true
         with:
-          reporter: 'github-pr-review'
+          reporter: github-pr-review
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
